--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,105 @@
+html * {
+  color-profile: sRGB;
+  rendering-intent: auto;
+}
+
+body {
+  padding-left: 1em;
+  padding-right: 1em;
+  font-family: Meiryo, Ricty, verdana, sans-serif;
+  color: #000;
+}
+
+h1 {
+  font-size: 3.0em;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 2.0em;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.0em;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 0.95em;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 0.9em;
+  font-weight: bold;
+}
+
+h6 {
+  font-size: 0.85em;
+  font-weight: bold;
+}
+
+img {
+  border: 0;
+}
+
+ol, ul, li {
+  font-size: 1.0em;
+  line-height: 1.2em;
+  margin-top: 0.2em;
+  margin-bottom: 0.1em;
+}
+
+p {
+  font-size: 1.0em;
+  margin: 1.2em 0em 1.2em 0em;
+}
+
+li > p {
+  margin-top: 0.2em;
+}
+
+pre {
+  font-family: monospace;
+  background-color: #eee;
+}
+
+a, a:link {
+  color: #6699cc;
+}
+
+a:active, a:hover {
+  color: #669933;
+}
+
+a:visited {
+  color: #8899aa;
+}
+
+div > pre {
+  overflow: auto;
+}
+
 h1.title {
   text-decoration: underline;
 }
+
 textarea {
   width: 99%;
   height: 200px;
 }
+
+code {
+  border: solid 1px #ccc;
+}
+
+pre > code {
+  border: 0px;
+}
+
+pre {
+  padding: 0.5em;
+}
+
+/* vim:set ts=8 sts=2 sw=2 noet: */
