--- a/view/edit.slim
+++ b/view/edit.slim
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     meta charset="UTF-8"
-    link rel=stylesheet href=/static/style.css
+    link rel="stylesheet" href="/static/style.css"
     title = title
   body
     div#content
@@ -10,4 +10,4 @@ html
       form method=post
         textarea name=content = content
         br
-        input type=submit
+        input type="submit"
