--- a/view/page.slim
+++ b/view/page.slim
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     meta charset="UTF-8"
-    link rel=stylesheet href=/static/style.css
+    link rel="stylesheet" href="/static/style.css"
     title = title
   body
     div#content
