--- a/view/page.slim
+++ b/view/page.slim
@@ -7,6 +7,6 @@ html
   body
     div#content
       h1.title = title
-      div.content = content
+      div.content == content
       a href="#{editpath}" edit
       a href="#{pagespath}" pages
